--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #010e2c;
+  background-color: #090f1d;
   color: white;
-  font-family: 'Do Hyeon', sans-serif;
+  font-family: 'Wallpoet', cursive;
   letter-spacing: 0.1em;
 }
